# test_CI

./: CMakeLists.txt  script.bat
.github/workflows/: ci.yml
cmake/: organized_projectConfig.h.in
install_cmake/cmake/: organized_projectConfig.cmake
install_cmake/include/: organized_projectConfig.h
mains/: CMakeLists.txt  hello.cpp  hello2.cpp
src/log_lib/: CMakeLists.txt  print_log.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_version.cpp
tests/built/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  organized_project.sln  test_hello.vcxproj  test_hello.vcxproj.filters  test_version.vcxproj  test_version.vcxproj.filters
tests/built/Debug/: test_hello.ilk  test_version.ilk
tests/built/Testing/Temporary/: CTestCostData.txt
tests/built/test_hello.dir/Debug/test_hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/built/test_version.dir/Debug/test_version.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/built/x64/Debug/RUN_TESTS/RUN_TESTS.tlog/: RUN_TESTS.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
tests/built/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
